refactor: #29 | Remove the usage of the deprecated APIs